# unigine_test_task

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  in.txt  out.txt  task.txt  unigine.cpp  untitled.txt  untitled1.txt  untitled2.txt  untitled3.txt
